# mcp-k8s-deployer

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: __init__.py  config.py  generator.py  k8s_client.py  server.py  tools.py  validator.py
tests/: __init__.py  test_generator.py  test_tools.py  test_validator.py
