[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-k8s-deployer"
version = "1.0.1"
description = "A Model Context Protocol (MCP) server for Kubernetes app deployment orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "mcp>=1.1.2",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/stwins60/mcp-k8s-deployer"

[project.scripts]
mcp-k8s-deployer = "src.server:main"
